Fix visual overlap of List items

--- a/src/components/common/List.module.scss
+++ b/src/components/common/List.module.scss
@@ -8,6 +8,7 @@
   align-items: flex-start;
   background-color: theme.$surface;
   color: theme.$on-surface;
+  gap: 8px;
 
   .item {
     display: flex;
